// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for minWidth: 36, maxWidth: 230, columns: 10, disabled: false, hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, state: error and noWrap: false 1`] = `
":host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined, [data-ssr]) {
  visibility: hidden;
}
slot:not([name]) {
  display: grid;
  grid-auto-rows: 1fr;
  grid-template-columns: repeat(10, minmax(0, 1fr));
  gap: 6px;
}
.root {
  all: unset;
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
}
.label {
  font: var(--p-font-weight-normal)
    var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: inherit;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, var(--p-duration-sm))
    var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal)
    var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-error);
  transition:
    color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out),
    opacity var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
@media (min-width: 480px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: calc(-1 * var(--p-spacing-static-xs));
  }
}
@media (min-width: 760px) {
  .label-wrapper {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap;
  }
  .label:is(span) {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap;
  }
}
@media (min-width: 1000px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: calc(-1 * var(--p-spacing-static-xs));
  }
}
@media (min-width: 1300px) {
  .label-wrapper {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap;
  }
  .label:is(span) {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap;
  }
}
@media (min-width: 1760px) {
  .label-wrapper {
    min-width: fit-content;
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
  .label:is(span) {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
    margin-top: calc(-1 * var(--p-spacing-static-xs));
  }
}
"
`;

exports[`getComponentCss() > should return correct css for minWidth: 46, maxWidth: 20, columns: { base: 4, s: 3, m: 2, l: 'auto' }, disabled: true, hideLabel: false, state: success and noWrap: false 1`] = `
":host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined, [data-ssr]) {
  visibility: hidden;
}
slot:not([name]) {
  display: grid;
  grid-auto-rows: 1fr;
  grid-template-columns: repeat(4, minmax(0, 1fr));
  gap: 6px;
}
.root {
  all: unset;
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal)
    var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: not-allowed;
  color: var(--p-color-primary);
  pointer-events: none;
  opacity: 0.4;
  transition: color var(--p-transition-duration, var(--p-duration-sm))
    var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal)
    var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-success);
  transition:
    color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out),
    opacity var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
@media (min-width: 760px) {
  slot:not([name]) {
    grid-template-columns: repeat(3, minmax(0, 1fr));
  }
}
@media (min-width: 1000px) {
  slot:not([name]) {
    grid-template-columns: repeat(2, minmax(0, 1fr));
  }
}
@media (min-width: 1300px) {
  slot:not([name]) {
    grid-template-columns: repeat(auto-fit, 46px);
  }
}
@media (forced-colors: active) {
  .label {
    opacity: 1;
    color: GrayText;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for minWidth: 46, maxWidth: 20, columns: auto, disabled: false, hideLabel: false, state: none and noWrap: false 1`] = `
":host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined, [data-ssr]) {
  visibility: hidden;
}
slot:not([name]) {
  display: grid;
  grid-auto-rows: 1fr;
  grid-template-columns: repeat(auto-fit, 46px);
  gap: 6px;
}
.root {
  all: unset;
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal)
    var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: inherit;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, var(--p-duration-sm))
    var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal)
    var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  transition:
    color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out),
    opacity var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
"
`;

exports[`getComponentCss() > should return correct css for minWidth: 46, maxWidth: 80, columns: 1, disabled: false, hideLabel: true, state: none and noWrap: false 1`] = `
":host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined, [data-ssr]) {
  visibility: hidden;
}
slot:not([name]) {
  display: grid;
  grid-auto-rows: 1fr;
  grid-template-columns: repeat(1, minmax(0, 1fr));
  gap: 6px;
}
.root {
  all: unset;
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.label-wrapper {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
}
.label {
  font: var(--p-font-weight-normal)
    var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: inherit;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, var(--p-duration-sm))
    var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal)
    var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  transition:
    color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out),
    opacity var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
"
`;

exports[`getComponentCss() > should return correct css for minWidth: undefined, maxWidth: undefined, columns: 1, disabled: false, hideLabel: false, state: none and noWrap: true 1`] = `
":host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined, [data-ssr]) {
  visibility: hidden;
}
slot:not([name]) {
  display: grid;
  grid-auto-rows: 1fr;
  grid-auto-flow: column;
  grid-auto-columns: max-content;
  gap: 6px;
}
.root {
  all: unset;
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal)
    var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: inherit;
  color: var(--p-color-primary);
  transition: color var(--p-transition-duration, var(--p-duration-sm))
    var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal)
    var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  transition:
    color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out),
    opacity var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.scroller {
  margin: -var(--p-spacing-static-xs) 0;
}
"
`;

exports[`getComponentCss() > should return correct css for minWidth: undefined, maxWidth: undefined, columns: auto, disabled: true, hideLabel: false, state: error and noWrap: true 1`] = `
":host([hidden]) {
  display: none !important;
}
slot[name="label-after"] {
  display: inline-block;
  vertical-align: top;
}
slot[name="label-after"]::slotted(*) {
  display: inline-block !important;
  vertical-align: top !important;
  margin-inline-start: var(--p-spacing-static-xs) !important;
}
.label-after {
  display: inline-block;
  vertical-align: top;
}
:not(:defined, [data-ssr]) {
  visibility: hidden;
}
slot:not([name]) {
  display: grid;
  grid-auto-rows: 1fr;
  grid-auto-flow: column;
  grid-auto-columns: max-content;
  gap: 6px;
}
.root {
  all: unset;
  display: grid;
  gap: var(--p-spacing-static-xs);
}
.label-wrapper {
  min-width: fit-content;
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label {
  font: var(--p-font-weight-normal)
    var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  cursor: not-allowed;
  color: var(--p-color-primary);
  pointer-events: none;
  opacity: 0.4;
  transition: color var(--p-transition-duration, var(--p-duration-sm))
    var(--p-ease-in-out);
  display: inline;
}
.label:empty {
  display: none;
}
.label:is(span) {
  cursor: unset;
  font-size: var(--p-typescale-xs);
  color: var(--p-color-contrast-high);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
  margin-top: calc(-1 * var(--p-spacing-static-xs));
}
.label > slot[name="label"]::slotted(*) {
  display: inline !important;
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: var(--p-spacing-static-xs);
  font: var(--p-font-weight-normal)
    var(--p-typescale-sm)/var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-error);
  transition:
    color var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out),
    opacity var(--p-transition-duration, var(--p-duration-sm))
      var(--p-ease-in-out);
}
.message:empty {
  opacity: 0;
  position: absolute;
}
.scroller {
  margin: -var(--p-spacing-static-xs) 0;
}
@media (forced-colors: active) {
  .label {
    opacity: 1;
    color: GrayText;
  }
}
"
`;
